Add command to install firebase

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ jobs:
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
       - run:
+          name: Install Firebase
+          command: npm install --save-dev firebase-tools
+      - run:
           name: Deploy Develop to Firebase
           command: firebase deploy --token FIREBASE_DEPLOY_TOKEN
 
