--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           command: npm install --save-dev firebase-tools
       - run:
           name: Deploy Develop to Firebase
-          command: npm run firebase-deploy -- --token=FIREBASE_DEPLOY_TOKEN
+          command: npm run firebase-deploy -- --token=$FIREBASE_DEPLOY_TOKEN
 
 workflows:
   version: 2
